# imgui_fc_visualizer

./: AudioVisualizer.cpp  AudioVisualizer.h  CMakeLists.txt  LICENSE  NesEmulator.cpp  NesEmulator.h  PianoVisualizer.cpp  PianoVisualizer.h  README.md  impl.cpp  main.cpp
.github/workflows/: manual-build.yml
SoundFont/: MSGS_Fixed.sf2
